@@ -1,4 +1,4 @@
-CHANGES.txt - 05/24/2000
+CHANGES.txt - 05/31/2000
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.8
@@ -12,6 +12,9 @@ CHANGES IN HTMLDOC v1.8.8
 	- No longer draw borders around empty cells in tables..
 
     BUG FIXES
+
+	- Nested tables didn't take into account the table border
+	  width, spacing, or padding values.
 
 
 CHANGES IN HTMLDOC v1.8.7
